# CPP_Blockchain_Practice

./: CMakeLists.txt  conanfile.py  glossary.md  main.cpp  note.txt  readme.md
app_blockchain/src/: CMakeLists.txt
app_blockchain/src/blockchain/: block.cpp  block.h  blockchain.cpp  blockchain.h  chain.cpp  chain.h  coin.h  database.cpp  index.h  miner.cpp  miner.h  referenceData.h  transtraction.cpp  transtraction.h  user.cpp  user.h  wallet.cpp  wallet.h
resources/: glossary.md  note.txt
src/: blockchain.cpp  blockchain.h  index.h  main.cpp  memPool.cpp  miner.cpp  miner.h  transtraction.cpp  transtraction.h  wallet.cpp  wallet.h
src/block/: block.h
src/crypto/: rsa.cpp  rsa.h
src/node/: miner.cpp  node.cpp
